--- a/template/index.html
+++ b/template/index.html
@@ -34,13 +34,12 @@
         <img src="../images/Profile_pic.jpeg" alt="Profile Pic" id="img1" />
       </div>
       <div>
-        <p>
           <h3 id="I">Hi,</h3><br /><span>I'm Ayaz S. Qureshi</span
           ><br /><span id="desig">Front-End Developer</span>
-        </p> &nbsp;
       <section> <a href="./AYAZ_Qureshi.docx"><button type="button" class="button">Download CV</button></button></a>
         <a href="https://www.linkedin.com/in/ayaz-qureshi-208712b6/" target="_blank"><button type="button" class="button">LinkedIn</button></a></button>
       </section>
+      <p class="det">A dedicated youth aspiring to prove skills/abilities in Information Technology  <br>field.Strongly believes in problem solving tools: Creativity, Out of box thinking &<br> Brainstorming session. Fully conversant with SDLC. Possess non-IT experience <br> of 2 years. I bring a diverse skill set and a proven track record of success to <br>contribute my expertise and drive results for the new organization. Aiming for the  <br>role of Front-End Developer in Nagpur / Pune / Bangalore.</p>
       </div>    
     </div>
 
