--- a/styles/index.css
+++ b/styles/index.css
@@ -32,7 +32,7 @@ a {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  padding: 20px 50px;
+  padding: 15px 50px;
   
 }
 
@@ -50,11 +50,12 @@ a {
 }
 
 .port-logo span{
-  font-weight: 600;
+  font-size: 25px;
   color: red;
 }
 
 .port-logo{
+  font-weight: 600;
   position: relative;
   color: white;
 }
@@ -78,7 +79,7 @@ a {
     left: 0;
   }
   25%{
-   left: 90px;
+   left: 120px;
   }
   50%{
     right: 0;
@@ -147,6 +148,7 @@ ul li a:hover::before{
     width: 100vw;
   }
   .nav-bar{
+    justify-content: space-between;
     font-size: 10px;
     padding: 10px 6px;
   }
@@ -191,24 +193,84 @@ ul li a:hover::before{
   }
   .hamburger{
     display: block;
-    width: 15px;
-    height: 15px;
+    width: 25px;
   } 
+
+  .port-logo span{
+    font-size: 15px;
+    color: red;
+  }
+  
+  .port-logo{
+    font-weight: 600;
+    position: relative;
+    color: white;
+  }
 }
 
 @media (min-width: 768px) and (max-width: 1024px) {
   .nav-bar{
+    justify-content: space-evenly;
     font-size: 15px;
   }
   .nav-links ul a{
    font-size: 15px;
    text-wrap: nowrap;
-   margin: 0 2px;
+   margin: 0 1px;
   }
 
   .head-section{
     width: 100vw;
   }
+
+  .port-logo::before{
+    content: '';
+    width: 10px;
+    position: absolute;
+    bottom: -6px;
+    left: 0;
+    height: 2px;
+    background-color: yellow;
+    animation-name: logo;
+    animation-duration: 4s;
+    animation-timing-function: ease;
+    animation-iteration-count: infinite;
+  }
+  
+  @keyframes logo {
+    0%{
+      left: 0;
+    }
+    25%{
+     left: 90px;
+    }
+    50%{
+      right: 0;
+    }
+    75%{
+      top: -6px;
+    }
+    100%{
+      left: 0;
+    }
+  }
+
+  .port-logo span{
+    font-size: 13px;
+    color: red;
+  }
+  
+  .port-logo{
+    font-weight: 600;
+    position: relative;
+    left: -40px;
+    color: white;
+  }
+
+  .hire-btn {
+    position: relative;
+    right: -40px;
+   }
 
 }
 
@@ -219,7 +281,7 @@ ul li a:hover::before{
   background-image: url(../images/top-view-desk-dark-concept-with-copy-space.jpg);
   background-size: cover;
   height: 100vh;
-  margin-right: 0px;
+  /* margin-top: 70px; */
   display: flex;
   align-items: center;
 }
@@ -303,7 +365,7 @@ ul li a:hover::before{
     justify-content: center;
     width: 100%;
     height: auto;
-    padding-top: 30px;
+    padding-top: 50px;
   }
 
   #img1 {
@@ -378,6 +440,7 @@ ul li a:hover::before{
 
 .academics {
   width: inherit;
+  height: 100vh;
   background-color: rgba(197, 192, 192, 0.485);
   padding-top: 40px;
   z-index: 0;
@@ -385,13 +448,12 @@ ul li a:hover::before{
 
 .acad {
   display: flex;
-  justify-content: center;
+  justify-content: start;
   font-size: 30px;
   font-weight: 500px;
   padding: 40px 100px;
   gap: 10px;
-  position: relative;
-  right: 70px;
+  /* position: relative; */
 }
 
 .acad h1 {
@@ -483,7 +545,7 @@ ul li a:hover::before{
 
 /* --respnsiveness-- */
 
-@media (min-width: 360px) and (max-width: 915px) {
+@media (min-width: 360px) and (max-width: 767px) {
   .academics {
     width: inherit;
     height: auto;
@@ -499,7 +561,7 @@ ul li a:hover::before{
 
   .fa-graduation-cap {
     margin-top: 10px;
-    top: 0px;
+    top: -5px;
   }
 
   .card-section {
@@ -526,19 +588,12 @@ ul li a:hover::before{
   }
 
   .card-box {
-    display: grid;
-    /* justify-content: center; */
-    grid-template-columns: repeat(1, 0.5fr);
-    grid-template-rows: auto;
-    position: relative;
-    /* left: 80px;
-      gap: 20px; */
+    flex-wrap: wrap;
   }
   .hire-me button {
     font-size: 10px;
     position: relative;
     left: 10px;
-    top: 10px;
     width: 70px;
     padding: 5px;
     border-radius: 15px;
@@ -548,7 +603,6 @@ ul li a:hover::before{
     font-size: 10px;
     position: relative;
     left: 10px;
-    top: 10px;
     width: 80px;
     padding: 5px;
     border-radius: 15px;
@@ -593,81 +647,15 @@ ul li a:hover::before{
   }
 
   .card-box {
-    display: grid;
-    /* justify-content: center; */
-    grid-template-columns: repeat(2, 50%);
-    grid-template-rows: auto;
-    position: relative;
-    /* left: 80px; */
-    /* gap: 10px; */
-  }
-
-  .hire-me button {
-    font-size: 10px;
-    position: relative;
-    left: 10px;
-    padding: 5px;
-    border-radius: 15px;
-    margin: 0px;
-  }
-  .hire-more button {
-    font-size: 10px;
-    position: relative;
-    left: 10px;
-    padding: 5px;
-    border-radius: 15px;
-    margin: 0px;
-  }
-}
-
-@media (min-width: 1200px) {
-  .academics {
-    width: inherit;
-    height: 100vh;
-    text-align: auto;
-    /* padding: 10px 0 10px 0; */
-  }
-  .acad {
-    justify-content: start;
-    font-size: 25px;
-    margin-left: 70px;
-  }
-  .card-box {
     display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-  }
-}
-
-@media (min-width: 561px) and (max-width: 766px) {
-  .academics {
-    width: inherit;
-    height: auto;
-    text-align: center;
-    padding: 10px 0 10px 0;
-  }
-
-  .acad {
     justify-content: center;
     flex-wrap: wrap;
-    font-size: 18px;
-    right: 0px;
-  }
-
-  .fa-graduation-cap {
-    margin-top: 15px;
-  }
-
-  .card-box {
-    align-items: center;
-    flex-wrap: wrap;
   }
 
   .hire-me button {
     font-size: 10px;
     position: relative;
     left: 10px;
-    top: 10px;
     padding: 5px;
     border-radius: 15px;
     margin: 0px;
@@ -676,7 +664,6 @@ ul li a:hover::before{
     font-size: 10px;
     position: relative;
     left: 10px;
-    top: 10px;
     padding: 5px;
     border-radius: 15px;
     margin: 0px;
@@ -686,12 +673,10 @@ ul li a:hover::before{
 /* --skills-- */
 .skill {
   width: inherit;
+  height: 100vh;
   font-family: Gill Sans, sans-serif;
   list-style: none;
   background-color: gray;
-  padding: 0;
-  margin: 0;
-  height: 100vh;
 }
 
 .myskill h1 {
@@ -805,15 +790,15 @@ ul li a:hover::before{
 @media (min-width: 360px) and (max-width: 767px) {
   .skill {
     padding: 0px;
-    margin: 0;
-    height: 70vh;
   }
   .myskill {
-    top: 125px;
-    padding: 0px;
+    position: relative;
+    top: 120px;
+    padding: 30px;
     margin: auto;
-    width: 200px;
+    width: 300px;
   }
+
   .myskill h1 {
     font-size: 30px;
     font-weight: 700;
@@ -834,8 +819,11 @@ ul li a:hover::before{
 @media (min-width: 768px) and (max-width: 1024px) {
   .skill {
     margin: 0px;
+    height: 100vh;
+    justify-content: center;
   }
   .myskill {
+    top: 50px;
     padding: 10px;
     margin: auto;
     width: 350px;
@@ -845,6 +833,10 @@ ul li a:hover::before{
 /* -------Contact------ */
 
 .contact {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   width: inherit;
   height: 100%;
   background-color: rgb(94, 123, 113);
@@ -852,7 +844,7 @@ ul li a:hover::before{
 
 #mc h2 {
   font-size: 50px;
-  text-align: center;
+  text-align: left;
   font-weight: 700;
   color: white;
   padding: 40px 0 0 0;
@@ -865,11 +857,13 @@ ul li a:hover::before{
 
 #form {
   display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  border-radius: 10px;
-  padding: 20px;
-  width: 50%;
+  flex-direction: column;
+  align-items: center;
+  padding: 30px;
+  text-align: center;
+  width: 40vw;
+  height: 70vh;
+  border: 2px solid black;
 }
 
 .item {
@@ -878,20 +872,31 @@ ul li a:hover::before{
   margin: 15px;
   box-sizing: border-box;
   border: 1px solid black;
-  border-radius: 15px;
   font-size: 20px;
+  width: 400px;
 }
 
-.item3 {
+/* .item1{
+  width: 305px;
+}
+
+.item2{
+  width: 305px;
+} */
+
+/* .item3 {
   width: 90%;
 }
 
 .item4 {
   width: 90%;
-}
+} */
 
 .item:hover {
   box-shadow: 0 1px 2px 4px rgb(64, 103, 94);
+}
+textarea{
+  resize: none;
 }
 textarea:hover {
   box-shadow: 0 1px 2px 4px rgb(19, 136, 190);
@@ -900,27 +905,19 @@ textarea:hover {
 .item5 {
   background-color: black;
   color: white;
-  font-size: 20px;
-  padding: 15px 25px 15px 25px;
+  font-size: 15px;
+  padding: 10px 20px;
   border-radius: 30px;
 }
 
-/* .item5:hover{
-  color: black;
-  cursor: pointer;
-  transform: scale(1.02);
-  box-shadow: 0 0 15px white;
-} */
-
-/* 
-
 /* --respnsiveness-- */
 
-@media (min-width: 350px) and (max-width: 560px) {
+@media (min-width: 350px) and (max-width: 767px) {
   #form {
     margin: 0px 0px 10px 0px;
     width: 70%;
-    border: 1px solid white;
+    height: 70%;
+    border: none;
   }
 
   .contact button {
@@ -929,25 +926,32 @@ textarea:hover {
   }
 
   .item {
+    width: 70vw;
     text-align: center;
     padding: 5px;
     margin: 8px;
     box-sizing: border-box;
     border: 1px solid black;
-    border-radius: 10px;
     font-size: 10px;
   }
 
+  textarea{
+    width: 180px;
+  }
+
   #mc h2 {
+    padding: 20px;
     font-size: 25px;
+    color: white;
   }
 }
 
 @media (min-width: 768px) and (max-width: 1024px) {
   #form {
-    margin: 0px 0px 10px 0px;
     width: 60%;
-    border: 1px solid white;
+    height: 50vh;
+    border: none;
+    margin-top: 50px;
   }
 
   .contact button {
@@ -956,17 +960,22 @@ textarea:hover {
   }
 
   .item {
+    width: 500px;
     text-align: center;
     padding: 10px;
-    margin: 8px;
     box-sizing: border-box;
-    /* border: 1px solid black; */
-    border-radius: 10px;
-    font-size: 10px;
   }
 
   #mc h2 {
     font-size: 35px;
+  }
+
+  .item5 {
+    background-color: black;
+    color: white;
+    font-size: 20px;
+    padding: 15px 25px 15px 25px;
+    border-radius: 30px;
   }
 }
 
